--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,6 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-  margin-bottom: 5vh;
   text-align: center;
 }
 
@@ -23,3 +22,9 @@
 .toolbar-class {
   border: 1px solid #ccc;
 }
+
+
+.viewer-wrapper-class {
+  font-size: 1rem;
+}
+
